finish slack integration makeovers

--- a/data/events.yml
+++ b/data/events.yml
@@ -1,11 +1,11 @@
 ---
 run_completion:
-  run: [id, result, description, time_taken, total_tests, total_passed_tests, total_failed_tests, total_no_result_tests]
+  run: [id, environment, result, description, time_taken, total_tests, total_passed_tests, total_failed_tests, total_no_result_tests]
 run_error:
   run: [id, description, error_reason]
 webhook_timeout:
   run: [id, description]
 run_test_failure:
-  run: [id, description]
+  run: [id, description, environment]
   failed_test: [id, title, frontend_url]
   browser: true
