--- a/fixtures/vcr_cassettes/generic_hip_chat_notification.yml
+++ b/fixtures/vcr_cassettes/generic_hip_chat_notification.yml
@@ -5,8 +5,9 @@ http_interactions:
     uri: https://api.hipchat.com/v2/room/Rainforestqa/notification
     body:
       encoding: UTF-8
-      string: '{"color":"red","message":"Your Rainforest Run (\u003ca href=\"http://www.rainforestqa.com/\"\u003eRun
-        #9: rainforest run\u003c/a\u003e) failed. Time to finish: 12 minutes 30 seconds","notify":true,"message_format":"html"}'
+      string: '{"from":"Rainforest QA","color":"red","message":"Your Rainforest Run
+        (\u003ca href=\"http://www.rainforestqa.com/\"\u003eRun #9: rainforest run\u003c/a\u003e)
+        is complete!","notify":true,"message_format":"html"}'
     headers:
       Authorization:
       - Bearer SFLaaWu13VxCd7ew4FqNnNJeCcoAZ8MF4kofX3GZ
@@ -21,12 +22,14 @@ http_interactions:
     headers:
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Expose-Headers:
+      - ETag, Link, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-Backoff
       Content-Type:
       - text/html
       Date:
-      - Wed, 04 Nov 2015 22:32:35 GMT
+      - Tue, 01 Dec 2015 00:36:42 GMT
       Location:
-      - https://api.hipchat.com/v2/room/1902326/history/b54e68df-4943-4f89-aa82-67201914d321
+      - https://api.hipchat.com/v2/room/1902326/history/f3848886-3b68-4dd2-bb0f-fbd9aefcda69
       Server:
       - nginx
       Strict-Transport-Security:
@@ -36,9 +39,9 @@ http_interactions:
       X-Ratelimit-Limit:
       - '100'
       X-Ratelimit-Remaining:
-      - '97'
+      - '100'
       X-Ratelimit-Reset:
-      - '1446676496'
+      - '1448930503'
       X-Xss-Protection:
       - 1; mode=block
       Connection:
@@ -47,5 +50,5 @@ http_interactions:
       encoding: UTF-8
       string: ''
     http_version: 
-  recorded_at: Wed, 04 Nov 2015 22:32:35 GMT
+  recorded_at: Tue, 01 Dec 2015 00:36:42 GMT
 recorded_with: VCR 2.9.3
