--- a/fixtures/vcr_cassettes/hip_chat_wrong_auth_token.yml
+++ b/fixtures/vcr_cassettes/hip_chat_wrong_auth_token.yml
@@ -5,8 +5,9 @@ http_interactions:
     uri: https://api.hipchat.com/v2/room/Rainforestqa/notification
     body:
       encoding: UTF-8
-      string: '{"color":"red","message":"Your Rainforest Run (\u003ca href=\"http://www.rainforestqa.com/\"\u003eRun
-        #9: rainforest run\u003c/a\u003e) failed. Time to finish: 12 minutes 30 seconds","notify":true,"message_format":"html"}'
+      string: '{"from":"Rainforest QA","color":"red","message":"Your Rainforest Run
+        (\u003ca href=\"http://www.rainforestqa.com/\"\u003eRun #9: rainforest run\u003c/a\u003e)
+        is complete!","notify":true,"message_format":"html"}'
     headers:
       Authorization:
       - Bearer foobar
@@ -21,10 +22,12 @@ http_interactions:
     headers:
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Expose-Headers:
+      - ETag, Link, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset, X-Backoff
       Content-Type:
       - application/json
       Date:
-      - Wed, 04 Nov 2015 22:32:37 GMT
+      - Tue, 01 Dec 2015 00:36:42 GMT
       Server:
       - nginx
       Content-Length:
@@ -42,5 +45,5 @@ http_interactions:
           }
         }
     http_version: 
-  recorded_at: Wed, 04 Nov 2015 22:32:37 GMT
+  recorded_at: Tue, 01 Dec 2015 00:36:42 GMT
 recorded_with: VCR 2.9.3
