--- a/fixtures/vcr_cassettes/run_test_failure_notify_slack.yml
+++ b/fixtures/vcr_cassettes/run_test_failure_notify_slack.yml
@@ -5,10 +5,10 @@ http_interactions:
     uri: https://hooks.slack.com/services/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
     body:
       encoding: UTF-8
-      string: '{"attachments":[{"text":"Your Rainforest Run (\u003c | Run #\u003e)
-        has a failed at test! \u003c | Test #7: My lucky test\u003e","fallback":"Your
-        Rainforest Run (\u003c | Run #\u003e) has a failed at test! \u003c | Test
-        #7: My lucky test\u003e","color":"danger"}]}'
+      string: '{"attachments":[{"text":"Your Rainforest Run (\u003chttp://www.example.com
+        | Run #666\u003e) has a failed a test!","color":"danger","fields":[{"title":"Failed
+        Test","value":"\u003c | Test #7: \u003e","short":true},{"title":"Environment","value":"QA
+        Environment","short":true},{"title":"Browser","value":"Google Chrome","short":true}]}]}'
     headers:
       Content-Type:
       - application/json
@@ -21,10 +21,12 @@ http_interactions:
     headers:
       Access-Control-Allow-Origin:
       - "*"
+      Content-Security-Policy:
+      - referrer no-referrer;
       Content-Type:
       - text/html
       Date:
-      - Thu, 10 Sep 2015 23:59:14 GMT
+      - Tue, 01 Dec 2015 00:36:44 GMT
       Server:
       - Apache
       Strict-Transport-Security:
@@ -39,5 +41,5 @@ http_interactions:
       encoding: UTF-8
       string: ok
     http_version: 
-  recorded_at: Thu, 10 Sep 2015 23:59:14 GMT
+  recorded_at: Tue, 01 Dec 2015 00:36:44 GMT
 recorded_with: VCR 2.9.3
