--- a/fixtures/vcr_cassettes/webhook_timeout_notify_slack.yml
+++ b/fixtures/vcr_cassettes/webhook_timeout_notify_slack.yml
@@ -5,11 +5,9 @@ http_interactions:
     uri: https://hooks.slack.com/services/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
     body:
       encoding: UTF-8
-      string: '{"attachments":[{"text":"Your Rainforest Run (\u003c | Run #7\u003e)
-        has timed out due to your webhook failing. If you need a hand debugging it,
-        please let us know via email at help@rainforestqa.com.","fallback":"Your Rainforest
-        Run (\u003c | Run #7\u003e) has timed out due to your webhook failing. If
-        you need a hand debugging it, please let us know via email at help@rainforestqa.com.","color":"danger"}]}'
+      string: '{"attachments":[{"text":"Your Rainforest Run (\u003chttp://www.example.com
+        | Run #7\u003e) has timed out due to a webhook failure!\nIf you need a hand
+        debugging it, please let us know via email at help@rainforestqa.com.","color":"danger","fields":[{"title":"Environment","value":"Foobar","short":false}]}]}'
     headers:
       Content-Type:
       - application/json
@@ -27,7 +25,7 @@ http_interactions:
       Content-Type:
       - text/html
       Date:
-      - Thu, 05 Nov 2015 02:33:03 GMT
+      - Tue, 01 Dec 2015 00:37:40 GMT
       Server:
       - Apache
       Strict-Transport-Security:
@@ -42,5 +40,5 @@ http_interactions:
       encoding: UTF-8
       string: ok
     http_version: 
-  recorded_at: Thu, 05 Nov 2015 02:33:04 GMT
+  recorded_at: Tue, 01 Dec 2015 00:37:40 GMT
 recorded_with: VCR 2.9.3
