--- a/data/events.yml
+++ b/data/events.yml
@@ -8,4 +8,4 @@ webhook_timeout:
 run_test_failure:
   run: [id, description, environment]
   failed_test: [id, title, frontend_url]
-  browser: [full_name]
+  browser: [description]
