return authorization information to frontend

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ INTEGRATIONS_SIGNING_KEY=morefakefakefake
 INTEGRATION_SENTRY_DSN=morefakefakefake
 
 ALLOWED_ORIGINS=http://localhost:4000,http://app.rainforest.dev
+FRONTEND_URL=http://localhost:4000
