--- a/data/events.yml
+++ b/data/events.yml
@@ -1,25 +1,21 @@
 run_completion:
   title: Run Completion
   description: Receive notification when any of your runs complete.
-  integrations: [slack, hipchat]
   payload:
     run: [id, environment, result, description, time_taken, total_tests, total_passed_tests, total_failed_tests, total_no_result_tests]
 run_error:
   title: Run Error
   description: Receive notification when there is an error in any of your runs.
-  integrations: [slack, hipchat]
   payload:
     run: [id, description, error_reason]
 webhook_timeout:
   title: Webhook Timeout
   description: Receive a notification when your webhook times out.
-  integrations: [slack, hipchat, jira]
   payload:
     run: [id, description, environment]
 run_test_failure:
   title: Test Failure
-  description: Receive a notificaiton when any of your tests fail.
-  integrations: [slack, hipchat, jira]
+  description: Receive a notification when any of your tests fail.
   payload:
     run: [id, description, environment]
     failed_test: [id, title, frontend_url]
