--- a/data/events.yml
+++ b/data/events.yml
@@ -20,3 +20,4 @@ run_test_failure:
     run: [id, description, environment]
     failed_test: [id, title, frontend_url]
     browser: [description]
+    feedback: true
