add integration test for pivotal and slack

--- a/data/integrations.yml
+++ b/data/integrations.yml
@@ -6,6 +6,7 @@ slack:
     - run_error
     - webhook_timeout
     - run_test_failure
+    - integration_test
   settings:
     - key: 'url'
       title: 'Slack webhook URL'
@@ -17,6 +18,7 @@ hip_chat:
     - run_error
     - webhook_timeout
     - run_test_failure
+    - integration_test
   settings:
     - key: 'room_id'
       title: 'HipChat Room id'
@@ -29,6 +31,7 @@ pivotal_tracker:
   events:
     - webhook_timeout
     - run_test_failure
+    - integration_test
   settings:
     - key: "project_id"
       title: "Project ID for new stories to be posted"
@@ -41,6 +44,7 @@ jira:
   events:
     - webhook_timeout
     - run_test_failure
+    - integration_test
   settings:
     - key: oauth_settings
       oauth_version: 1
